{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 284,
  "lineage": "955580f9-9bf3-0018-d9c8-0fac99262ccd",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:914666654987:security-group/sg-0c4d310c5a506f77d",
            "description": "securitygroup for lwxi",
            "filter": null,
            "id": "sg-0c4d310c5a506f77d",
            "name": "lexi-SG-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0c9bfba115905a64e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:914666654987:subnet/subnet-0a9200e72351b3fc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "available_ip_address_count": 4086,
            "cidr_block": "10.0.0.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9200e72351b3fc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "914666654987",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "lexi2.0-subnet-public1-us-west-2a"
            },
            "vpc_id": "vpc-0c9bfba115905a64e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:914666654987:security-group/sg-043d25ea77f6fd38d",
            "description": "Example security group",
            "egress": [],
            "id": "sg-043d25ea77f6fd38d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "example-sg",
            "name_prefix": "",
            "owner_id": "914666654987",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-060c429f53c13bf94"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}